# claude-closed-learning

./: README.md  pyproject.toml
.claude/: settings.json
docs/superpowers/plans/: 2026-04-19-hermes-install-pipx-git-implementation.md
docs/superpowers/specs/: 2026-04-19-hermes-install-pipx-git-design.md
hermes_install/: __init__.py  cli.py  migrator.py  template_source.py  ui.py  uninstall_cli.py
scripts/hermes_learning/: approval_executor.py  extract_turns.py  skill_index.py  state.py
scripts/hermes_learning/hooks/: session-start.sh  stop-hook.sh
scripts/hermes_learning/mcp/: candidate_buffer.py  memory_tool.py  server.py  skills_tool.py
tests/hermes_install/: test_cli_flow.py  test_migrator.py  test_migrator_uninstall.py  test_template_source.py  test_uninstall_cli.py
tests/hermes_learning/: test_approval_executor.py  test_candidate_buffer.py  test_candidate_buffer_v2.py  test_extract_turns.py  test_mcp_learning_tools.py  test_phase1_e2e_dryrun.py  test_session_start_output.py  test_settings_schema.py  test_state_schema_paths.py  test_stop_hook_flow.py
