[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-install"
version = "0.1.0"
description = "Hermes Learning installer"
readme = {text = "Hermes Learning installer", content-type = "text/plain"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hermes-install = "hermes_install.cli:main"
hermes-uninstall = "hermes_install.uninstall_cli:main"

[tool.setuptools]
packages = ["hermes_install"]
